minor accessibility fix, spacing issues for posts pages, change background sidebar color

--- a/css/global.css
+++ b/css/global.css
@@ -48,7 +48,7 @@ ul#menu-utility-nav li a { color: black; text-decoration: none; }
 
 /* Left Navigation ****************************************/
 nav {display:inline;float:left; background-color:#e5e2d1; min-height:400px;}
-#middle nav {color:#fff; background:#efe9e4;font-family:helvetica, arial, sans-serif;}
+#middle nav {color:#fff; background:#E0DDCE;font-family:helvetica, arial, sans-serif;}
 #middle nav ul {padding:0;margin:0; }
 #three_col_vert nav,#two_col_vert nav{margin:0 ;width:204px}
 
@@ -173,6 +173,8 @@ aside#sidebar .widget_text .helper {border:none; background:none;}
 aside#sidebar .widget_text {
   border:1px solid #FF9897;
   background:none;
+   line-height:16px;
+  font-size:0.85em;
 }
 
 aside#sidebar .widget_text a {
